--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 - DOCUMENTATION!
-- configuration defaults (environment, ...)
 - optionally pass application basedir from command line
+- configuration defaults (environment, web.xml, classes dir, lib dir, ...)
 - customize configuration from command line
 - read configuration from warbler.rb
 - install custom resources from warbler configuration
