--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,12 @@
 - DOCUMENTATION!
 - optionally pass application basedir from command line
+- add more flexibility to jetty_rails bin (-contextPath <path> -environment <env> ...)
 - configuration defaults (environment, web.xml, classes dir, lib dir, ...)
 - customize configuration from command line
 - read configuration from warbler.rb
 - install custom resources from warbler configuration
 - add custom classes from warbler.rb to the context classpath
 - add custom jars from warbler.rb to the context classpath
+- load web.xml (or web.erb.xml) from config/web.xml
+- read any custom jetty.xml
+- support jetty-plus features (i.e.: jndi)
