--- a/History.txt
+++ b/History.txt
@@ -1,10 +1,14 @@
+== 0.3
+
+* Improved Documentation: rdoc and site.
+
 == 0.2
 
-* Running any rails applications with no extra classpath
+* Running any rails applications with no extra classpath.
 * Command line options for jett_rails binary executable.
   See: <tt>jruby -S jetty_rails --help</tt> for details.
 
 == 0.1
 
-* Initial release
-* Running default rails applications inside Jetty
+* Initial release.
+* Running default rails applications inside Jetty.
