advice from Rich at mailing list

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,11 @@
 == TODO never ends...
 
 * DOCUMENTATION!
+* change default port to 3000
 * configuration defaults (environment, web.xml, classes dir, lib dir, ...)
 * read configuration from warbler.rb
 * install custom resources from warbler configuration
+* more command line options: --daemon, --num-instances
 * add custom classes from warbler.rb to the context classpath
 * add custom jars from warbler.rb to the context classpath
 * load web.xml (or web.erb.xml) from config/web.xml
