--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 
 * Improve RDocs
 * configuration defaults (web.xml, classes dir, lib dir, ...)
+* integration test for lib_dir jars loading
 * read configuration from warbler.rb
 * install custom resources from warbler configuration
 * more command line options: --daemon, --num-instances
