--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,8 @@
 == 0.6
 * load all java classes inside classes/ by default
 * command line args to customize lib/ and classes/ directories
-* separate classloaders for each web application context (isolated classpaths)
+* -v showing jetty_rails version
+* each web application context has its own classloader (isolated classpaths)
 * upgraded to jruby-rack-0.9.2 (no more views being cached in development time)
 * minor changes and refactorings
 * improved docs for multi-server support
